--- a/gameofthrones.html
+++ b/gameofthrones.html
@@ -16,8 +16,8 @@
         
         <div>
             <hr>
-        <img src="images/daenerys.jpg" width=300px height=300px>
-        <img src="images/arya.jpg" width=30% height=40%>
+        <img src="images/daenerys.jpg" width=30%>
+        <img src="images/arya.jpg" width=30%>
         <img src="images/sansa.jpg" width=30%>
         <img src="images/jamie.jpg" width=30%>
         <img src="images/jonsnow.jpg" width=30%>
