--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">All about me</a></li>
             <li><a href="resume.html">My Resume</a></li>
-            <li><a href="gameofthrones.html">Game of Thrones<a/></li>
+            <li><a href="scratch.html">Scratch Game</a></li>
              </ul>
         <h1>All about me </h1> 
       <center><h2>Welcome to my page!</h2></center>
@@ -21,6 +21,7 @@
              <center><img src="images/personalpictures/mikayla1.jpg" alt="mikayla1.jpg" width="40%"></center>
         </div>
         <body>
+            <a href= "scratch.html" >scratch game</a>
     <p>Top 4 played songs at the moment</p>
         
         <ol>
