--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">All about me</a></li>
             <li><a href="resume.html">My Resume</a></li>
-            <li><a href="gameofthrones.html">Game of Thrones<a/></li>
+            <li><a href="scratch.html">Scratch Game</a></li>
              </ul>
         <h1>My Resume </h1> 
         <br>
