--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">All about me</a></li>
             <li><a href="resume.html">My Resume</a></li>
-            <li><a href="gameofthrones.html">Game of Thrones<a/></li>
+         <li><a href="scratch.html">Scratch Game</a></li>
         </ul>
         <h1>welcome to my home page!</h1>
         <h2><center>Snapchat</center></h2>
