--- a/scratch.html
+++ b/scratch.html
@@ -12,3 +12,29 @@
             <li><a href="scratch.html">Scratch Game</a></li>
              </ul>
         <h1>Scratch Game</h1> 
+        <p><center><h2>Pacman Remake</h2></center></p>
+           <h3>This game is a remake of Toru Iwatani creation of PACMAN. 
+           This original game was a classic where the objective was for 
+           pacman to do around and collect the white dots while avoiding 
+           the ghost! Our remake is similar. However, we included different 
+           factors such as music, the brunner heads instead of white dots, 
+           difficulty increase with different stages, brunner heads as an attack,
+           and more. The objective of our game has the same goal as the original 
+           to collect more points as much as possible and avoiding the ghosts.</h3>
+           
+             <div id="#game">
+               <p><center><iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/184770349/?autostart=false" frameborder="0" allowfullscreen></iframe></center></p>
+               </div>
+               <h2>1. Describe some programming concepts or structures you learned in this unit that you applied in your game.</h2>
+               <p>By using scratch, I was able to learn many concepts like the block building in order to make my sprite move. I learned what
+               a nested code is different from a topped code. In the game pacman remake, I learned how to code a pre-set location for the sprite to follow.</p>
+               <div></div>
+               <h2>2. Did you encounter any problems or struggles while working on this project? If you did, how did you solve or overcome them?</h2>
+               <p>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello</p>
+               <div></div>
+               <h2>3. What aspects of your game do you like best?</h2>
+               <p>something something something</p>
+               <div></div>
+               <h2>If more time was given for you to work on your game, what would you improve or modify about your game?</h2>
+               <p>hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi h ih i hi h ih i hi i hi </p>
+               <div></div>
