--- a/scratch.html
+++ b/scratch.html
@@ -35,6 +35,6 @@
                <h2>3. What aspects of your game do you like best?</h2>
                <p>something something something</p>
                <div></div>
-               <h2>If more time was given for you to work on your game, what would you improve or modify about your game?</h2>
+               <h2>4. If more time was given for you to work on your game, what would you improve or modify about your game?</h2>
                <p>hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi h ih i hi h ih i hi i hi </p>
                <div></div>
