--- a/scratch.html
+++ b/scratch.html
@@ -30,11 +30,16 @@
                a nested code is different from a topped code. In the game pacman remake, I learned how to code a pre-set location for the sprite to follow.</p>
                <div></div>
                <h2>2. Did you encounter any problems or struggles while working on this project? If you did, how did you solve or overcome them?</h2>
-               <p>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello</p>
+               <p>One issue we had encountered from creating this game was inputing the sound for the whole game. Some of the music would be delayed or hard to place into the game.
+               We also had an issue with pacman moving to different locations of the game screen. For instance, it gets a bit laggy around the narrow walls where it is 
+               difficult for pacman to travel. </p>
                <div></div>
                <h2>3. What aspects of your game do you like best?</h2>
-               <p>something something something</p>
+               <p>One aspect of pacman that I enjoyed making was the movement of the ghosts. I enjoyed making the ghosts follow pacman and also increasing the difficulty of the 
+               ghost every level. One way that I enjoyed making the creating the movement of the ghost was tracing the location and placing the ghost places that 
+               I want it to travel. I also liked how our game has three levels.</p>
                <div></div>
                <h2>4. If more time was given for you to work on your game, what would you improve or modify about your game?</h2>
-               <p>hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi hi h ih i hi h ih i hi i hi </p>
+               <p>One way I would improve or modify my game is to fix the sound of the game and the lag of the game when it comes to pacman and the walls. I would improve this 
+               by redoing the sound of the video, cutting unimportant parts, and aligning the music with the game. </p>
                <div></div>
