--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
             <li><a href="about.html">All about me</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="scratch.html">Scratch Game</a></li>
+            <li><a href="python.html">Python </a></li>
              </ul>
         <h1>All about me </h1> 
       <center><h2>Welcome to my page!</h2></center>
