--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
             <li><a href="about.html">All about me</a></li>
             <li><a href="resume.html">My Resume</a></li>
             <li><a href="scratch.html">Scratch Game</a></li>
+            <li><a href="python.html">Python </a></li>
              </ul>
         <h1>My portfolio</h1> 
         <h2><center>Here are some notes</center><h/2></h>
