--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
             <li><a href="python.html">Python </a></li>
              </ul>
         <h1>My portfolio</h1> 
-        <h2><center>Here are some notes</center><h/2></h>
+        <h2><center>Here are some notes!</center><h/2></h>
         <div>
             <hr>
         <a href= "https://docs.google.com/a/ggusd.net/document/d/1rwbrDpi2_2RRwhl7iclQiJzgkfkjc3mVUCwBvf4pugU/edit?usp=sharing" target="_blank">The internet notes. Part 1</a>
