--- a/python.html
+++ b/python.html
@@ -16,12 +16,12 @@
         <br>
         <center><img src="images/pythonpicture.png" alt="pythonpicture.png" width="30%"></center>
         </div>
-        <h2><center>Here are the Python Notes from Repl.it</center></h2>
+        <h2><center>Here are the Python Notes from Repl.it.</center></h2>
         <div>
         <center><a href= https://repl.it/@MikaylaNguyen/IntroPython target="_blank">Python Notes</a></center>
         <hr>
         <div>
-        <h2><center>Here isthe interactive fiction story</center></h2>
+        <h2><center>Here isthe interactive fiction story!</center></h2>
         <center><a href= https://repl.it/@MikaylaNguyen/Good-and-Bad-Avocados target="_blank">Python Story: Good OR Bad Avocados</a><hr></center>
         
         <h2>1. Describe some programming concepts or structures you learned in this unit that you applied in your story.</h2>
